--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -77,6 +77,11 @@ a {
         padding-left: 1em;
     }
 
+    &.clear_date {
+        color: #c33;
+        font-size: 130%;
+    }
+
     &.title {
         font-size: 108%;
         font-weight: bold;
