--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/quotes.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/quotes.tt
@@ -156,7 +156,7 @@
         $(document).ready(function() {
 
             var quotes_url = '/api/v1/quotes';
-            var quotes = $("#quotes").api({
+            var quotes = $("#quotes").kohaTable({
                 "ajax": {
                     "url": quotes_url
                 },
