--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smtp_servers.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smtp_servers.tt
@@ -298,7 +298,7 @@
         $(document).ready(function() {
 
             var smtp_servers_url = '/api/v1/config/smtp_servers';
-            window.smtp_servers = $("#smtp_servers").api({
+            window.smtp_servers = $("#smtp_servers").kohaTable({
                 "ajax": {
                     "url": smtp_servers_url
                 },
