--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -777,7 +777,7 @@
                             </li>
                         [% END %]
 
-                        [% IF Koha.Preference('ClaimReturnedLostValue') %]
+                        [% IF Koha.Preference('ClaimReturnedLostValue') || Koha.Preference('BundleLostValue') %]
                             <li>
                                 [% IF ( patron.return_claims.count ) %]
                                     <a href="#return-claims" id="return-claims-tab">
@@ -896,7 +896,7 @@
                         [% END # /IF holds_count %]
                     </div> <!-- /#reserves -->
 
-                    [% IF Koha.Preference('ClaimReturnedLostValue') %]
+                    [% IF Koha.Preference('ClaimReturnedLostValue') || Koha.Preference('BundleLostValue') %]
                         [% INCLUDE 'patron-return-claims.inc' %]
                     [% END %]
 
@@ -982,7 +982,7 @@
     </script>
     [% Asset.js("js/pages/circulation.js") | $raw %]
     [% Asset.js("js/checkouts.js") | $raw %]
-    [% IF Koha.Preference('ClaimReturnedLostValue') %]
+    [% IF Koha.Preference('ClaimReturnedLostValue') || Koha.Preference('BundleLostValue') %]
         [% Asset.js("js/resolve_claim_modal.js") | $raw %]
     [% END %]
     [% Asset.js("js/holds.js") | $raw %]
