--- a/koha-tmpl/intranet-tmpl/prog/en/modules/bookings/list.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/bookings/list.tt
@@ -56,6 +56,7 @@
     </div> <!-- /.row -->
 
     [% INCLUDE modals/place_booking.inc %]
+    [% INCLUDE modals/cancel_booking.inc %]
 
     [% MACRO jsinclude BLOCK %]
     [% Asset.js("lib/vis-timeline/vis-timeline-graph2d.min.js") | $raw %]
@@ -65,7 +66,10 @@
     [% INCLUDE 'select2.inc' %]
     [% INCLUDE 'js-date-format.inc' %]
     [% Asset.js("js/place_booking_modal.js") | $raw %]
+    [% Asset.js("js/cancel_booking_modal.js") | $raw %]
 <script>
+    var cancel_success = 0;
+    var bookings_table;
     $(document).ready(function()
     {
 
@@ -89,13 +93,15 @@
                 for (item of items[0]) {
                     itemsSet.add({
                         id: item.item_id,
-                        content: "Item " + item.external_id
+                        content: "Item " + item.external_id,
                     });
                 }
 
                 var bookingsSet = new vis.DataSet();
                 for (booking of bookings[0]){
                     bookingsSet.add({
+                        id: booking.booking_id,
+                        booking: booking.booking_id,
                         start: moment(booking.start_date),
                         end: moment(booking.end_date),
                         content: 'Booking: ' + booking.booking_id,
@@ -114,6 +120,7 @@
                         item: "top"
                     },
                     timeAxis: {scale: 'day', step: 1},
+                    dataAttributes: [ 'booking' ],
                     onMoving: function (item, callback) {
                         var overlapping = bookingsSet.get({
                             filter: function(testItem) {
@@ -131,6 +138,15 @@
                             callback(item);
                         }
                     },
+                    onRemove: function (item, callback) {
+                        $('#cancelBookingModal').modal('show', $('<button data-booking="'+item.id+'">'));
+                        $('#cancelBookingModal').on('hide.bs.modal', function(e) {
+                            if (cancel_success) {
+                                cancel_success = 0;
+                                callback(item);
+                            }
+                        });
+                    }
                 };
                 var timeline = new vis.Timeline(container, bookingsSet, itemsSet, options);
             },
@@ -140,7 +156,7 @@
         );
 
         var bookings_table_url = "/api/v1/biblios/[% biblionumber | uri %]/bookings";
-        var bookings_table = $('#bookings_table').kohaTable({
+        bookings_table = $('#bookings_table').kohaTable({
             "ajax": {
                 "url": bookings_table_url
             },
@@ -202,8 +218,20 @@
                 "render": function(data, type, row, meta) {
                     return $datetime(row.end_date);
                 }
+            },
+            {
+                "data": "",
+                "title": "Actions",
+                "searchable": false,
+                "orderable": false,
+                "render": function(data, type, row, meta) {
+                    var result = '<button type="button" class="btn btn-default btn-xs cancel-action" data-toggle="modal" data-target="#cancelBookingModal" data-booking="'+row.booking_id+'"><i class="fa fa-trash" aria-hidden="true"></i> '+_("Cancel")+'</button>';
+                    return result;
+                }
             }]
         }, [], 1);
+
+
     });
 </script>
     [% END %]
