WIP: Edit Bookings - Not so sure this is needed

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/bookings/list.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/bookings/list.tt
@@ -56,6 +56,7 @@
     </div> <!-- /.row -->
 
     [% INCLUDE modals/place_booking.inc %]
+    [% INCLUDE modals/edit_booking.inc %]
     [% INCLUDE modals/cancel_booking.inc %]
 
     [% MACRO jsinclude BLOCK %]
@@ -66,6 +67,7 @@
     [% INCLUDE 'select2.inc' %]
     [% INCLUDE 'js-date-format.inc' %]
     [% Asset.js("js/place_booking_modal.js") | $raw %]
+    [% Asset.js("js/edit_booking_modal.js") | $raw %]
     [% Asset.js("js/cancel_booking_modal.js") | $raw %]
 <script>
     var cancel_success = 0;
@@ -225,7 +227,9 @@
                 "searchable": false,
                 "orderable": false,
                 "render": function(data, type, row, meta) {
-                    var result = '<button type="button" class="btn btn-default btn-xs cancel-action" data-toggle="modal" data-target="#cancelBookingModal" data-booking="'+row.booking_id+'"><i class="fa fa-trash" aria-hidden="true"></i> '+_("Cancel")+'</button>';
+                    var editButton = '<button type="button" class="btn btn-default btn-xs edit-action" data-toggle="modal" data-target="#editBookingModal" data-booking="'+row.booking_id+'"><i class="fa fa-pencil" aria-hidden="true"></i> '+_("Edit")+'</button>';
+                    var cancelButton = '<button type="button" class="btn btn-default btn-xs cancel-action" data-toggle="modal" data-target="#cancelBookingModal" data-booking="'+row.booking_id+'"><i class="fa fa-trash" aria-hidden="true"></i> '+_("Cancel")+'</button>';
+                    var result = editButton + cancelButton;
                     return result;
                 }
             }]
