--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/categories.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/categories.tt
@@ -596,6 +596,7 @@
                                                 [% ELSIF ( prefs.Item_Checkout ) %]Item checkout
                                                 [% ELSIF ( prefs.Ill_ready ) %]Interlibrary loan ready
                                                 [% ELSIF ( prefs.Ill_unavailable ) %]Interlibrary loan unavailable
+                                                [% ELSIF ( prefs.Ill_update ) %]Interlibrary loan updated
                                                 [% ELSIF ( prefs.Auto_Renewals ) %]Auto renewal
                                                 [% ELSIF ( prefs.Hold_Reminder ) %]Hold reminder
                                                 [% ELSE %]Unknown
